--- a/SpringBoot-Mybatis/src/main/resources/application.properties
+++ b/SpringBoot-Mybatis/src/main/resources/application.properties
@@ -6,11 +6,19 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/managesystem
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=admin
 spring.datasource.password=admin
-## 配置druid 数据源
+# 最大等待连接数，设置0为没有限制
+spring.datasource.tomcat.max-idle=10
+# 最大连接活动数
+spring.datasource.tomcat.max-active=50
+# 最大等待毫秒数，单位为ms, 超过时间会出错误信息
+spring.datasource.tomcat.max-wait=1000
+# 数据库连接池初始化连接数
+spring.datasource.tomcat.initial-size=5
+# 配置druid 数据源
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
 
-# 配置Mybatis 映射文件统配
+# 定义Mapper 的XML 路径
 mybatis.mapper-locations=classpath:com/loikun/boot/dao/*.xml
 logging.level.root=DEBUG
 logging.level.org.springframework=DEBUG
