--- a/SpringBoot-Redis/src/main/resources/application.properties
+++ b/SpringBoot-Redis/src/main/resources/application.properties
@@ -6,12 +6,12 @@ spring.redis.jedis.pool.max-idle=10
 spring.redis.jedis.pool.max-wait=2000ms
 
 # 配置Redis 服务器属性
-spring.redis.host=localhost
+spring.redis.host=127.0.0.1
 spring.redis.port=6379
 spring.redis.password=
 # Redis 连接超时时间
 spring.redis.timeout=2000ms
 
-#logging.level.root=DEBUG
-#logging.level.org.springframework=DEBUG
+logging.level.root=DEBUG
+logging.level.org.springframework=DEBUG
 
